Break the problem fieldset into smaller grids and add palm widths, to fix issues on small screens.

--- a/web/css/default.css
+++ b/web/css/default.css
@@ -415,7 +415,6 @@ input[type=text]:focus, .text-input:focus, textarea:focus { -webkit-box-shadow: 
 .problem-form .island-list li { margin-bottom: 30px; }
 .problem-form .steps-list { list-style: none; }
 .problem-form .steps-list li { padding: 25px 0 5px; border-bottom: 1px solid #dddddd; }
-.problem-form .slim-select > :first-child { margin-left: 20px; width: 45%; }
 
 .ie7 .problem-form .description-info ul li { zoom: 0; }
 
