--- a/web/sass/base/_forms.scss
+++ b/web/sass/base/_forms.scss
@@ -296,11 +296,6 @@ textarea {
     }
   }
 
-  .slim-select > :first-child {
-    margin-left: 20px;
-    width: 45%;
-  }
-
 }
 
 .ie7 {
